Modal popups are created for insert and update clients, vehicle component created, reportes component deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,12 @@
 		<li>
 			<a routerLink="/registrar">Registrar</a>
 		</li>
+		<li>
+			<a routerLink="/client">Clientes</a>
+		</li>
+		<li>
+			<a routerLink="/vehicle">Vehículos</a>
+		</li>
 	</ul>
 </div>
 
