Vehicles can be added and updated

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -50,16 +50,16 @@
 					 required autofocus [(ngModel)]="clientIdentification">
 
 					<label for="name" class="sr-only">Nombre</label>
-					<input type="text" id="name" name="name" class="form-control top" placeholder="Nombre" required autofocus [(ngModel)]="name">
+					<input type="text" id="name" name="name" class="form-control top" placeholder="Nombre" required [(ngModel)]="name">
 
 					<label for="lastname" class="sr-only">Apellido</label>
-					<input type="text" id="lastname" name="lastname" class="form-control top" placeholder="Apellido" required autofocus [(ngModel)]="lastname">
+					<input type="text" id="lastname" name="lastname" class="form-control top" placeholder="Apellido" required [(ngModel)]="lastname">
 
 					<label for="telephone" class="sr-only">Teléfono</label>
-					<input type="text" id="telephone" name="telephone" class="form-control top" placeholder="Teléfono" required autofocus [(ngModel)]="telephone">
+					<input type="text" id="telephone" name="telephone" class="form-control top" placeholder="Teléfono" required [(ngModel)]="telephone">
 
 					<label for="address" class="sr-only">Dirección</label>
-					<input type="text" id="address" name="address" class="form-control top" placeholder="Dirección" required autofocus [(ngModel)]="address">
+					<input type="text" id="address" name="address" class="form-control top" placeholder="Dirección" required [(ngModel)]="address">
 
 
 					<div class="modal-footer">
@@ -90,16 +90,16 @@
 						 required [(ngModel)]="clientIdentificationEdit">
 	
 						<label for="nameEdit" class="sr-only">Nombre</label>
-						<input type="text" id="nameEdit" name="nameEdit" class="form-control top" placeholder="Nombre" required autofocus [(ngModel)]="nameEdit">
+						<input type="text" id="nameEdit" name="nameEdit" class="form-control top" placeholder="Nombre" required [(ngModel)]="nameEdit">
 	
 						<label for="lastnameEdit" class="sr-only">Apellido</label>
-						<input type="text" id="lastnameEdit" name="lastnameEdit" class="form-control top" placeholder="Apellido" required autofocus [(ngModel)]="lastnameEdit">
+						<input type="text" id="lastnameEdit" name="lastnameEdit" class="form-control top" placeholder="Apellido" required [(ngModel)]="lastnameEdit">
 	
 						<label for="telephoneEdit" class="sr-only">Teléfono</label>
-						<input type="text" id="telephoneEdit" name="telephoneEdit" class="form-control top" placeholder="Teléfono" required autofocus [(ngModel)]="telephoneEdit">
+						<input type="text" id="telephoneEdit" name="telephoneEdit" class="form-control top" placeholder="Teléfono" required [(ngModel)]="telephoneEdit">
 	
 						<label for="addressEdit" class="sr-only">Dirección</label>
-						<input type="text" id="addressEdit" name="addressEdit" class="form-control top" placeholder="Dirección" required autofocus [(ngModel)]="addressEdit">
+						<input type="text" id="addressEdit" name="addressEdit" class="form-control top" placeholder="Dirección" required [(ngModel)]="addressEdit">
 	
 	
 						<div class="modal-footer">
