Added orders for each work, and date picker implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
 		<li>
 			<a routerLink="/vehicle">Vehículos</a>
 		</li>
+		<li>
+			<a routerLink="/order">Ordenes</a>
+		</li>
 	</ul>
 </div>
 
