Logout implementes, and reports can be generated

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,15 @@
 .welcomeName{
     text-align: right;
 }
+
+.center{
+    text-align: center;
+}
+
+.top{
+    margin-top: 2em;
+}
+
+img{
+    height: 25em;
+}
