--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
 <h4 class="welcomeName">{{ completeName }}</h4>
+
+<div class="center top">
+    <img class="top" src="../../assets/img/fondo.JPG" alt="fondo">
+</div>
